<resources>
    <string name="app_name">Support Orphans</string>
    <string name="activity_login_label_email">Email</string>
    <string name="activity_login_label_password">Password</string>
    <string name="activity_login_button_login">SIGN_IN</string>
    <string name="activity_login_label_register">Not Yet Registered?</string>
    <string name="activity_login_label_signup">Signup</string>
    <string name="activity_registration_label_name">Name</string>
    <string name="activity_registration_label_adress">Address</string>
    <string name="activity_registration_label_mobile">Mobile</string>
    <string name="activity_registration_button_name">Register</string>
    <string-array name="type">
        <item>Admin</item>
        <item>User</item>
    </string-array>
    <string-array name="orphanagelist">
        <item>Select Orphanage</item>
        <item>Sree Chithra Poor Home</item>
        <item>Santhwana</item>
        <item>Snehalayam</item>
    </string-array>

    <string name="action_settings">Settings</string>
</resources>
